--- a/index.html
+++ b/index.html
@@ -4,10 +4,121 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <title>Document</title>
 </head>
-
 <body>
+<!--ヘッダーここから-->
+<header class="header">
+  <div class="inner d--flex">
+    <div class="logo">
+      <i class="fas fa-archway fa-3x"></i>
+    </div>
+    <div class="menu">
+      <nav>
+        <ul class="nav d--flex">
+          <li>
+            <a href="#">contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
+<!--ヘッダーここまで-->
+<main>
+  <section class="keyvisual">
+    <img src="./img/keyvisual/keyvisual.jpg" alt="キービジュアル">
+    <div class="copy">
+      <h1>WEB PRODUCTION COMPANY</h1>
+      <h2>DIRECTION,CONTENT MARKETING</h2>
+    </div>
+  </section><!-- メインタイトル、サブタイトル、背景画像がある部分ここまで-->
+  <section class="work">
+    <div class="inner d--flex">
+      <div class="pc_illust">
+        <img src="./img/pc/pc.png" alt="PCイラスト">
+      </div>
+      <div class="work_catch_copy">
+        <p class="work_copy">WORK</p>
+        <p class="work_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu<br>nt ut labore et
+          dolore magna
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br> ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis
+          aute irure dolor in repreh<br>enderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+          sint</p>
+      </div>
+    </div>
+  </section><!-- 「WORK」のタイトルがある部分 -->
+  <section class="skills">
+    <div class="inner">
+      <p class="skills_copy">WE ARE SKILLS</p>
+      <div class="skills_icon">
+        <img src="./img/skills/skills_1.png" alt="1">
+        <img src="./img/skills/skills_2.png" alt="2">
+        <img src="./img/skills/skills_3.png" alt="3">
+        <img src="./img/skills/skills_4.png" alt="4">
+        <img src="./img/skills/skills_5.png" alt="5">
+        <img src="./img/skills/skills_6.png" alt="6">
+      </div>
+      </div>
+  </section><!-- 「WE ARE SKILLS」のタイトルがある部分-->
+  <section class="plan">
+    <div class="inner">
+      <p class="serect_plan_copy">SERECT PLAN</p>
+      <table>
+        <tr>
+          <th>PLAN</th>
+          <th>BASIC PLAN</th>
+          <th>STANDERD PLAN</th>
+          <th>ENTERPRISE PLAN</th>
+        </tr>
+        <tr>
+          <th>PRISE</th>
+          <td>¥100,000</td>
+          <td>¥200,000</td>
+          <td>¥300,000</td>
+        </tr>
+        <tr>
+          <th>DELIVERY</th>
+          <td>Manuscript</td>
+          <td>HTML</td>
+          <td>Manuscript,HTML,PSD</td>
+        </tr>
+        <tr>
+          <th>ANALYSIS</th>
+          <td>◯</td>
+          <td>◯</td>
+          <td>◯</td>
+        </tr>
+        <tr>
+          <th>IMPROVEMENT</th>
+          <td>×</td>
+          <td>◯</td>
+          <td>◯</td>
+        </tr>
+        <tr>
+          <th>DESIGN</th>
+          <td>×</td>
+          <td>×</td>
+          <td>◯</td>
+        </tr>
+      </table>
+    </div>
+  </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
+  <nav class="sns"></nav><!-- iconが並んでいる部分 -->
+  </main>
+
+  <footer>
+
+  </footer>
+
+  <div id="oregen"></div>
+
+
   <!-- Wrokの部分のテキストはこちらを使ってください -->
   <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna
