レビューお願いします

--- a/index.html
+++ b/index.html
@@ -13,32 +13,28 @@
 <body>
 <header class="header">
   <div class="inner d--flex">
-    <div class="logo">
+    <div class="header_logo">
       <i class="fas fa-archway fa-3x"></i>
     </div>
-    <div class="menu">
       <nav>
-        <ul class="nav d--flex">
+        <ul>
           <li>
             <a href="#">contact</a>
           </li>
         </ul>
       </nav>
-    </div>
   </div>
 </header>
 <!--ヘッダーここまで-->
-
 <main>
-  <section class="keyvisual">
-    <img src="./img/keyvisual/keyvisual.jpg" alt="キービジュアル">
-    <div class="copy">
-      <h1>WEB PRODUCTION COMPANY</h1>
-      <h2>DIRECTION,CONTENT MARKETING</h2>
-    </div>
+  <section class="keyvisual d--flex">
+    <div class="keyvisual_img">
+      <div class="keyvisual_copy">
+        <h1>WEB PRODUCTION COMPANY</h1>
+        <h2>DIRECTION,CONTENT MARKETING</h2>
+      </div>
   </section>
   <!-- メインタイトル、サブタイトル、背景画像がある部分ここまで-->
-
   <section class="work">
     <div class="inner d--flex">
       <div class="pc_illust">
@@ -57,7 +53,7 @@
       </div>
     </div>
   </section>
-  <!-- 「WORK」のタイトルがある部分 -->
+  <!-- 「WORK」のタイトルがある部分はここまで -->
   <section class="skills">
     <div class="inner">
       <p class="skills_copy">WE ARE SKILLS</p>
@@ -98,7 +94,7 @@
   <section class="plan">
     <div class="inner">
       <p class="serect_plan_copy">SERECT PLAN</p>
-      <table><!--テーブルにクラス名を入れる-->
+      <table>
         <thead>
           <tr>
             <th>PLAN</th>
@@ -143,7 +139,7 @@
     </div>
   </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
   <nav class="sns">
-    <div class="sns_flex">
+    <div class="inner sns_flex">
       <div class="icon">
         <i class="fab fa-facebook-f"></i>
       </div>
