レビューお願いします

--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
   </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
   <nav class="sns">
     <div class="inner sns_flex">
-      <div class="icon">
+      <div class="sns_icon">
         <i class="fab fa-facebook-f"></i>
       </div>
-      <div class="icon">
+      <div class="sns_icon">
         <i class="fab fa-dribbble"></i>
       </div>
-      <div class="icon">
+      <div class="sns_icon">
         <i class="fab fa-twitter"></i>
       </div>
-      <div class="icon">
+      <div class="sns_icon">
         <i class="far fa-envelope"></i><!-- "fab fa-envelope"はproなので文字化けしてしまいました。solidバージョンで代用します。-->
       </div>
     </div>
