レビューお願いします

--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 </header>
 <!--ヘッダーここまで-->
 <main>
-  <section class="keyvisual d--flex">
+  <section class="keyvisual">
     <div class="keyvisual_img">
       <div class="keyvisual_copy">
         <h1>WEB PRODUCTION COMPANY</h1>
         <h2>DIRECTION,CONTENT MARKETING</h2>
       </div>
+    </div>
   </section>
   <!-- メインタイトル、サブタイトル、背景画像がある部分ここまで-->
   <section class="work">
-    <div class="inner d--flex">
+    <div class="inner work--flex">
       <div class="pc_illust">
         <img src="./img/pc/pc.png" alt="PCイラスト">
       </div>
@@ -154,7 +155,7 @@
       </div>
     </div>
   </nav><!-- iconが並んでいる部分 -->
-  </main>
+</main>
   <footer>
     <div class="inner footer_flex">
       <p>Copyright(C)</p>
