--- a/index.html
+++ b/index.html
@@ -31,61 +31,62 @@
     <div class="keyvisual_img">
       <div class="keyvisual_copy">
         <h1>WEB PRODUCTION COMPANY</h1>
-        <h2>DIRECTION,CONTENT MARKETING</h2>
+        <p class="keyvisual_subcopy">DIRECTION,CONTENT MARKETING</p>
       </div>
     </div>
   </section>
   <!-- メインタイトル、サブタイトル、背景画像がある部分ここまで-->
   <section class="work">
     <div class="inner work--flex">
-      <div class="pc_illust">
-        <img src="./img/pc/pc.png" alt="PCイラスト">
+      <div class="pc_illust_parents">
+        <div class="pc_illust">
+          <img src="./img/pc/pc.png" alt="PCイラスト">
+        </div>
       </div>
       <div class="work_catch_copy">
-        <p class="work_copy">WORK</p>
-          <p class="work_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        <h2 class="work_copy">WORK</h2>
+        <p class="work_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis
             aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
             sint
-          </p>
-        </div>
+        </p>
       </div>
     </div>
   </section>
   <!-- 「WORK」のタイトルがある部分はここまで -->
   <section class="skills">
     <div class="inner">
-      <p class="skills_copy">WE ARE SKILLS</p>
+      <h2 class="skills_copy">WE ARE SKILLS</h2>
       <div class="skills_icon">
-        <div class="card">
+        <div class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_1.png" alt="1">
           </a>
         </div>
-        <div class="card">
+        <div class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_2.png" alt="2">
           </a>
         </div>
-        <div class="card">
+        <div class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_3.png" alt="3">
           </a>
         </div>
-        <div class="card">
+        <div class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_4.png" alt="4">
           </a>
         </div>
-        <div class="card">
+        <div class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_5.png" alt="5">
           </a>
         </div>
-        <div class="card">
-          <a href="card">
+        <div class="skills_card">
+          <a href="#">
             <img src="./img/skills/skills_6.png" alt="6">
           </a>
         </div>
@@ -94,7 +95,7 @@
   </section><!-- 「WE ARE SKILLS」のタイトルがある部分-->
   <section class="plan">
     <div class="inner">
-      <p class="serect_plan_copy">SERECT PLAN</p>
+      <h2 class="serect_plan_copy">SERECT PLAN</h2>
       <table>
         <thead>
           <tr>
@@ -158,7 +159,7 @@
 </main>
   <footer>
     <div class="inner footer_flex">
-      <p>Copyright(C)</p>
+      <p class="footer_copy">Copyright(C)</p>
     </div>
   </footer>
   <!-- Wrokの部分のテキストはこちらを使ってください -->
