レビューお願いします

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
       <nav>
         <ul>
-          <li>
-            <a href="#">contact</a>
+          <li class="contact">
+            <a class="contact_inline" href="#">contact</a>
           </li>
         </ul>
       </nav>
@@ -59,38 +59,38 @@
   <section class="skills">
     <div class="inner">
       <h2 class="skills_copy">WE ARE SKILLS</h2>
-      <div class="skills_icon">
-        <div class="skills_card">
+      <ul class="skills_icon_area">
+        <li class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_1.png" alt="1">
           </a>
-        </div>
-        <div class="skills_card">
+        </li>
+        <li class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_2.png" alt="2">
           </a>
-        </div>
-        <div class="skills_card">
+        </li>
+        <li class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_3.png" alt="3">
           </a>
-        </div>
-        <div class="skills_card">
+        </li>
+        <li class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_4.png" alt="4">
           </a>
-        </div>
-        <div class="skills_card">
+        </li>
+        <li class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_5.png" alt="5">
           </a>
-        </div>
-        <div class="skills_card">
+        </lidiv>
+        <li class="skills_card">
           <a href="#">
             <img src="./img/skills/skills_6.png" alt="6">
           </a>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
   </section><!-- 「WE ARE SKILLS」のタイトルがある部分-->
   <section class="plan">
