--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
     </div>
   </section><!-- 「SELECT PLAN」のタイトルがある部分 -->
   <nav class="sns">
-    <div class="inner sns_flex">
-      <div class="sns_icon">
+    <ul class="inner sns_flex">
+      <li class="sns_icon">
         <i class="fab fa-facebook-f"></i>
-      </div>
-      <div class="sns_icon">
+      </li>
+      <li class="sns_icon">
         <i class="fab fa-dribbble"></i>
-      </div>
-      <div class="sns_icon">
+      </li>
+      <li class="sns_icon">
         <i class="fab fa-twitter"></i>
-      </div>
-      <div class="sns_icon">
+      </li>
+      <li class="sns_icon">
         <i class="far fa-envelope"></i><!-- "fab fa-envelope"はproなので文字化けしてしまいました。solidバージョンで代用します。-->
-      </div>
-    </div>
+      </li>
+    </ul>
   </nav><!-- iconが並んでいる部分 -->
 </main>
   <footer>
