12/12修正・レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <ul>
           <li class="contact">
             <a class="contact_inline" href="#">contact</a>
+            <span class="nav_toggle">
+              <i></i>
+              <i></i>
+              <i></i>
+            </span>
           </li>
         </ul>
       </nav>
