--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </section><!-- 「WE ARE SKILLS」のタイトルがある部分-->
   <section class="plan">
     <div class="inner">
-      <h2 class="serect_plan_copy">SERECT PLAN</h2>
+      <h2 class="select_plan_copy">SELECT PLAN</h2>
       <table>
         <thead>
           <tr>
